2000-07-14  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Class/ClassTest.java
	(test_getClassloader): Use full name of ClassTest class.
	From sharon wu <lotus_june@yahoo.com>.

2000-07-10  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/io/PipedStream/receive.java: Fixed tag.
	Changed code to use `receive' and not `PipeTest'.
	From Peter Naulls.

2000-04-21  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/io/PipedStream/receive.java: New file.

2000-04-20  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/io/PipedStream/close.java: New file.

2000-03-08  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/reflect/Array/newInstance.java: New file.

2000-03-05  Anthony Green  <green@redhat.com>

	* gnu/testlet/java/lang/Math/sin.java: New file.

2000-03-02  Anthony Green  <green@cygnus.com>

	* gnu/testlet/java/net/URL/URLTest.java (test_toString):
	sourceware.cygnus.com has a new IP address.
	(test_openConnection): Sourceware is running a newer version of
	Apache.

2000-01-09  Anthony Green  <green@cygnus.com>

	* gnu/testlet/java/lang/String/StringTest.java (test_getChars,
	test_getBytes): Don't check for StringIndexOutOfBoundsException or
	ArrayIndexOutOfBoundsException.  The spec only mentions
	IndexOutOfBoundsException.
	
2000-01-07  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Class/ClassTest.java (test_forName): Use
	`check', not `fail'.  Added check to make sure forName("I")
	fails.

	* gnu/testlet/java/lang/reflect/Constructor/newInstance.java: New
	file.

2000-01-06  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Class/reflect.java (test): Added tests for
	int.class.

	* gnu/testlet/java/lang/reflect/Method/invoke.java (test): Use
	`na_meth' and not `ti_meth' in null pointer test.  Added some
	comments.

2000-01-05  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/reflect/Method/invoke.java: Create Integer
	objects, not arrays of Integers.
