@@ -1,3 +1,7 @@
+2000-08-04  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/testlet/java/io/StreamTokenizer/newline.java: New file.
+
 2000-07-14  Tom Tromey  <tromey@cygnus.com>
 
 	* gnu/testlet/java/lang/Class/ClassTest.java
